# openai-agent

./: README.md  pyproject.toml
deployment/: deployment.yaml  service.yaml
src/: Dockerfile  app.py  chat.py  requirements.txt
src/behaviors/: default.txt
src/knowledge/: architecture overview.md  project-overview.md
src/templates/: chat.html
